--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -19,6 +19,33 @@
     "\n",
     "**Professor**: Papa Momar Ndiaye"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Problem #1 - Utility Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1. Log Utility"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. **Certainty Equivalent and Risk Premium**\n",
+    "\n",
+    "An investor whose initial wealth is \\$1000 is offered an opportunity to play a fair game with 2 possible outcomes: winning $350 with a probability of 1/3 or losing $150 with a probability of 2/3. The investor utility function is the natural logarithm of his wealth, $u(W) = ln(W)$.\n",
+    "\n",
+    "- What is the Certainty Equivalent of this risky game?\n",
+    "- What is the exact Risk Premium of this risky game?\n",
+    "- How good is the approximation obtained by using a Taylor series expansion?"
+   ]
   }
  ],
  "metadata": {
