Define initial terms.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -40,11 +40,21 @@
    "source": [
     "a. **Certainty Equivalent and Risk Premium**\n",
     "\n",
-    "An investor whose initial wealth is \\$1000 is offered an opportunity to play a fair game with 2 possible outcomes: winning $350 with a probability of 1/3 or losing $150 with a probability of 2/3. The investor utility function is the natural logarithm of his wealth, $u(W) = ln(W)$.\n",
+    "An investor whose initial wealth is \\$1000 is offered an opportunity to play a fair game with 2 possible outcomes: winning $350 with a probability of 1/3 or losing $150 with a probability of 2/3. The investor utility function is the natural logarithm of his wealth, $u(W) = \\ln(W)$.\n",
     "\n",
     "- What is the Certainty Equivalent of this risky game?\n",
     "- What is the exact Risk Premium of this risky game?\n",
     "- How good is the approximation obtained by using a Taylor series expansion?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's define some terms: \n",
+    "- **Certainty Equivalent (CE)**: The guaranteed amount of money that an investor considers equivalent to a risky gamble. It's the amount where the investor is indifferent between the certain payment and the risky gamble.\n",
+    "- **Risk Premium (RP)**: The difference between the expected return of the risky gamble and the certainty equivalent. It represents the extra amount an investor needs to be willing to participate in the risky gamble.\n",
+    "- **Utility Function**: In this case, $u(W) = \\ln(W)$, where $W$ is wealth. This function represents the investor's satisfaction or utility with different levels of wealth."
    ]
   }
  ],
