Write out algorithm in written words.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -59,7 +59,15 @@
     "Given:\n",
     "- Initial wealth, $W_0 = \\$1000$\n",
     "- Win amount, $W_{ \\text{win} } = \\$350$ with probability $p_{\\text{win}} = \\frac{1}{3}$\n",
-    "- Loss amount, $W_{ \\text{loss} } = -\\$150$ with probability $p_{\\text{loss}} = \\frac{2}{3}$"
+    "- Loss amount, $W_{ \\text{loss} } = -\\$150$ with probability $p_{\\text{loss}} = \\frac{2}{3}$\n",
+    "\n",
+    "We can calculate the expected utility of the gamble, find the certainty equivalent by equating the expected utility to the utility of the certainty equivalent, and then calculate the risk premium. Additionally, we'll use a Taylor series expansion around the initial wealth to approximate the expected utility and compare it.\n",
+    "\n",
+    "As such, we will do the following steps:\n",
+    "1. Calculate the *expected utility* of the game.\n",
+    "2. Find the *certainty equivalent (CE)* by setting the expected utility equal to the utility of the CE and solving for CE.\n",
+    "3. Calculate the *risk premium* as the difference between the expected wealth and the certainty equivalent.\n",
+    "4. Compare the *exact expected utility* to the approximation obtained by using a *Taylor series expansion* around the initial wealth."
    ]
   }
  ],
