--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -69,11 +69,54 @@
     "3. Calculate the *risk premium* as the difference between the expected wealth and the certainty equivalent.\n",
     "4. Compare the *exact expected utility* to the approximation obtained by using a *Taylor series expansion* around the initial wealth."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import fsolve\n",
+    "\n",
+    "# Given data.\n",
+    "initial_wealth = 1000\n",
+    "win_amount = 350\n",
+    "lose_amount = -150\n",
+    "prob_win = 1/3\n",
+    "prob_lose = 2/3\n",
+    "\n",
+    "def utility(W: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the utility of wealth using a natural logarithm.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - W (float): Wealth.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: Utility of the wealth.\n",
+    "    \"\"\"\n",
+    "    return np.log(W)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
