Write expected_utility function with type-hinting and doc-strings.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -96,7 +96,23 @@
     "    Returns:\n",
     "    - float: Utility of the wealth.\n",
     "    \"\"\"\n",
-    "    return np.log(W)"
+    "    return np.log(W)\n",
+    "\n",
+    "def expected_utility(W0: float, W_win: float, W_lose: float, p_win: float, p_lose: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the expected utility of a gamble with given outcomes and probabilities.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - W0 (float): Initial wealth.\n",
+    "    - W_win (float): Winning amount.\n",
+    "    - W_lose (float): Losing amount.\n",
+    "    - p_win (float): Probability of winning.\n",
+    "    - p_lose (float): Probability of losing.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: Expected utility of the gamble.\n",
+    "    \"\"\"\n",
+    "    return p_win * utility(W0 + W_win) + p_lose * utility(W0 + W_lose)"
    ]
   }
  ],
