Write find_certainity_equivalent function with type-hinting and doc-strings.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,22 @@
     "    Returns:\n",
     "    - float: Expected utility of the gamble.\n",
     "    \"\"\"\n",
-    "    return p_win * utility(W0 + W_win) + p_lose * utility(W0 + W_lose)"
+    "    return p_win * utility(W0 + W_win) + p_lose * utility(W0 + W_lose)\n",
+    "\n",
+    "def find_certainty_equivalent(EU: float, W0: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Find the certainty equivalent of a gamble based on its expected utility.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - EU (float): Expected utility of the gamble.\n",
+    "    - W0 (float): Initial wealth.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: Certainty equivalent of the gamble.\n",
+    "    \"\"\"\n",
+    "    func = lambda CE: utility(W0 + CE) - EU\n",
+    "    CE, = fsolve(func, 0)  # Initial guess for CE is 0\n",
+    "    return CE"
    ]
   }
  ],
