Write calculate_risk_premium() method with type-hinting and doc-strings.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -127,7 +127,21 @@
     "    \"\"\"\n",
     "    func = lambda CE: utility(W0 + CE) - EU\n",
     "    CE, = fsolve(func, 0)  # Initial guess for CE is 0\n",
-    "    return CE"
+    "    return CE\n",
+    "\n",
+    "def calculate_risk_premium(E_W: float, W0: float, CE: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the risk premium of the gamble.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - E_W (float): Expected wealth from the gamble.\n",
+    "    - W0 (float): Initial wealth.\n",
+    "    - CE (float): Certainty equivalent of the gamble.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: Risk premium of the gamble.\n",
+    "    \"\"\"\n",
+    "    return E_W - (W0 + CE)"
    ]
   }
  ],
