Define and initialize values.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -79,13 +79,6 @@
     "import numpy as np\n",
     "from scipy.optimize import fsolve\n",
     "\n",
-    "# Given data.\n",
-    "initial_wealth = 1000\n",
-    "win_amount = 350\n",
-    "lose_amount = -150\n",
-    "prob_win = 1/3\n",
-    "prob_lose = 2/3\n",
-    "\n",
     "def utility(W: float) -> float:\n",
     "    \"\"\"\n",
     "    Calculate the utility of wealth using a natural logarithm.\n",
@@ -141,7 +134,14 @@
     "    Returns:\n",
     "    - float: Risk premium of the gamble.\n",
     "    \"\"\"\n",
-    "    return E_W - (W0 + CE)"
+    "    return E_W - (W0 + CE)\n",
+    "\n",
+    "# Given values\n",
+    "W0 = 1000\n",
+    "W_win = 350\n",
+    "W_lose = -150\n",
+    "p_win = 1/3\n",
+    "p_lose = 2/3"
    ]
   }
  ],
