--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -72,9 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Certainty Equivalent: -8.28\n",
+      "Risk Premium: 24.94\n",
+      "Expected Utility: 6.8994\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import fsolve\n",
@@ -141,7 +151,24 @@
     "W_win = 350\n",
     "W_lose = -150\n",
     "p_win = 1/3\n",
-    "p_lose = 2/3"
+    "p_lose = 2/3\n",
+    "\n",
+    "# Calculate expected utility of the gamble.\n",
+    "EU = expected_utility(W0, W_win, W_lose, p_win, p_lose)\n",
+    "\n",
+    "# Solve for the certainty equivalent.\n",
+    "CE = find_certainty_equivalent(EU, W0)\n",
+    "\n",
+    "# Calculate expected wealth from the game.\n",
+    "E_W = W0 + p_win * W_win + p_lose * W_lose\n",
+    "\n",
+    "# Calculate the risk premium.\n",
+    "RP = calculate_risk_premium(E_W, W0, CE)\n",
+    "\n",
+    "# Display results.\n",
+    "print(f\"Certainty Equivalent: {CE:.2f}\")\n",
+    "print(f\"Risk Premium: {RP:.2f}\")\n",
+    "print(f\"Expected Utility: {EU:.4f}\")"
    ]
   }
  ],
