Add extra import for type-hinting Callable types.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +88,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import fsolve\n",
+    "from typing import Callable\n",
     "\n",
     "def utility(W: float) -> float:\n",
     "    \"\"\"\n",
