Add taylor_series_expansion() method with doc-strings and type-hinting.

--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -130,7 +130,7 @@
     "    - float: Certainty equivalent of the gamble.\n",
     "    \"\"\"\n",
     "    func = lambda CE: utility(W0 + CE) - EU\n",
-    "    CE, = fsolve(func, 0)  # Initial guess for CE is 0\n",
+    "    CE, = fsolve(func, 0)  # Initial guess for CE is 0.\n",
     "    return CE\n",
     "\n",
     "def calculate_risk_premium(E_W: float, W0: float, CE: float) -> float:\n",
@@ -146,6 +146,20 @@
     "    - float: Risk premium of the gamble.\n",
     "    \"\"\"\n",
     "    return E_W - (W0 + CE)\n",
+    "\n",
+    "def taylor_series_expansion(u_prime: float, u_double_prime: float, delta_W: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Approximates the expected utility using Taylor series expansion.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - u_prime: First derivative of the utility function at initial wealth.\n",
+    "    - u_double_prime: Second derivative of the utility function at initial wealth.\n",
+    "    - delta_W: Change in wealth.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - Taylor series approximation of expected utility.\n",
+    "    \"\"\"\n",
+    "    return u_prime * delta_W + 0.5 * u_double_prime * (delta_W**2)\n",
     "\n",
     "# Given values\n",
     "W0 = 1000\n",
