--- a/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homeworks/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,8 @@
      "text": [
       "Certainty Equivalent: -8.28\n",
       "Risk Premium: 24.94\n",
-      "Expected Utility: 6.8994\n"
+      "Expected Utility: 6.8994\n",
+      "Taylor Series Expected Utility Approximation: 6.9243\n"
      ]
     }
    ],
@@ -180,10 +181,17 @@
     "# Calculate the risk premium.\n",
     "RP = calculate_risk_premium(E_W, W0, CE)\n",
     "\n",
+    "# Compute the series expansion.\n",
+    "u_prime_W0 = 1/W0\n",
+    "u_double_prime_W0 = -1/(W0**2)\n",
+    "delta_W = p_win * W_win + p_lose * W_lose\n",
+    "EU_approx = utility(W0) + taylor_series_expansion(u_prime_W0, u_double_prime_W0, delta_W)\n",
+    "\n",
     "# Display results.\n",
     "print(f\"Certainty Equivalent: {CE:.2f}\")\n",
     "print(f\"Risk Premium: {RP:.2f}\")\n",
-    "print(f\"Expected Utility: {EU:.4f}\")"
+    "print(f\"Expected Utility: {EU:.4f}\")\n",
+    "print(f\"Taylor Series Expected Utility Approximation: {EU_approx:.4f}\")"
    ]
   }
  ],
