--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "a. **Certainty Equivalent and Risk Premium**\n",
     "\n",
-    "An investor whose initial wealth is \\$1000 is offered an opportunity to play a fair game with 2 possible outcomes: winning $350 with a probability of 1/3 or losing $150 with a probability of 2/3. The investor utility function is the natural logarithm of his wealth, $u(W) = \\ln(W)$.\n",
+    "An investor whose initial wealth is $\\$1000$ is offered an opportunity to play a fair game with 2 possible outcomes: winning $\\$350$ with a probability of $1/3$ or losing $\\$150$ with a probability of $2/3$. The investor utility function is the natural logarithm of his wealth, $u(W) = \\ln(W)$.\n",
     "\n",
     "- What is the Certainty Equivalent of this risky game?\n",
     "- What is the exact Risk Premium of this risky game?\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +209,55 @@
     "3. *How good is the approximation obtained by using a Taylor series expansion?*\n",
     "\n",
     "The approximation of the expected utility using a Taylor series expansion is **quite good**. The exact expected utility (EU) calculated is **6.8994**, while the Taylor series expected utility approximation (EU_approx) is **6.9243**. The difference between them is minimal, indicating that the Taylor series expansion provides a close approximation to the actual expected utility for this particular setup. This suggests that for small changes in wealth (such as those involved in this gamble, relative to the investor's initial wealth), the Taylor series expansion around the initial wealth effectively captures the utility function's curvature and provides a reliable estimate of the expected utility."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. **Sensitivity to Initial Wealth**\n",
+    "\n",
+    "Assume that the initial wealth is $\\$2000$. What is the risk premium now?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Risk Premium: 13.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "W0_new = 2000\n",
+    "\n",
+    "# Calculate expected utility of the gamble with new initial wealth.\n",
+    "EU_new = expected_utility(W0_new, W_win, W_lose, p_win, p_lose)\n",
+    "\n",
+    "# Solve for the certainty equivalent with new initial wealth.\n",
+    "CE_new = find_certainty_equivalent(EU_new, W0_new)\n",
+    "\n",
+    "# Calculate expected wealth from the game with new initial wealth.\n",
+    "E_W_new = W0_new + p_win * W_win + p_lose * W_lose\n",
+    "\n",
+    "# Calculate the risk premium with the new initial wealth.\n",
+    "RP_new = calculate_risk_premium(E_W_new, W0_new, CE_new)\n",
+    "\n",
+    "print(f\"New Risk Premium: {RP_new:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the initial wealth increase to $\\$2000$ and applying the previously defined Python code, the risk premium for this new scenario is approximately $\\bf{\\$13.10}$. This result indicates how sensitive the investor's risk aversion is to changes in initial wealth. With an initial wealth of $2000, the investor perceives the gamble to be less risky compared to when the initial wealth was $1000, hence the lower risk premium.\n",
+    "\n",
+    "This decrease in the risk premium with an increase in initial wealth can be attributed to the utility function's properties, which in this case is a logarithmic function. The logarithmic utility function exhibits **diminishing marginal utility**, meaning that as wealth increases, the utility gained from an additional dollar becomes less significant. Consequently, the investor's aversion to losing a certain amount of money diminishes as their wealth increases, leading to a lower risk premium for the gamble at higher levels of initial wealth."
    ]
   }
  ],
