Calculate new risk premium for 1c.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -268,6 +268,44 @@
     "\n",
     "Assume that the initial wealth is $\\$1000$ and the outcomes are winning $\\$300$ with a probability of $1/2$ or losing $\\$300$ with a probability of $1/2$. What is the risk premium now?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Risk Premium: 46.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Re-defining necessary values and functions to calculate the new risk premium.\n",
+    "\n",
+    "# Updated game conditions for sensitivity to volatility.\n",
+    "W0 = 1000  # Initial wealth is $1000\n",
+    "W_win = 300  # Winning amount is now $300\n",
+    "W_lose = -300  # Losing amount is also $300, indicating increased volatility\n",
+    "p_win = 1/2  # Probability of winning is 1/2\n",
+    "p_lose = 1/2  # Probability of losing is also 1/2\n",
+    "\n",
+    "# Calculate expected utility with the new conditions.\n",
+    "EU_new = expected_utility(W0, W_win, W_lose, p_win, p_lose)\n",
+    "\n",
+    "# Solve for the certainty equivalent with the new conditions.\n",
+    "CE_new = find_certainty_equivalent(EU_new, W0)\n",
+    "\n",
+    "# Calculate expected wealth from the game with the new conditions.\n",
+    "E_W_new = W0 + p_win * W_win + p_lose * W_lose\n",
+    "\n",
+    "# Calculate the risk premium with the new conditions\n",
+    "RP_new = calculate_risk_premium(E_W_new, W0, CE_new)\n",
+    "\n",
+    "print(f\"New Risk Premium: {RP_new:.2f}\")"
+   ]
   }
  ],
  "metadata": {
