--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -329,6 +329,15 @@
    "source": [
     "An investor whose initial wealth is $\\$1000$ is offered an opportunity to play a gamble with 2 possible outcomes: winning $\\$250$ with a probability of $2/3$ or losing $\\$400$ with a probability of $1/3$. The investor utility function is given by $u(W) = W^k$, where $k \\in \\mathbb{R}$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. **Absolute Risk Aversion & Risk Attitude**\n",
+    "\n",
+    "Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer."
+   ]
   }
  ],
  "metadata": {
