Simplify ARA(W) formula.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -338,6 +338,24 @@
     "\n",
     "Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's define **absolute risk aversion** (**ARA**) and explain how it relates to the utility function's shape as well as the parameter $k$.\n",
+    "\n",
+    "$$\\text{ARA}(W) = -\\frac{u''(W)}{u'(W)}$$\n",
+    "\n",
+    "Given the utility function $u(W) = W^k$, we can compute its *first* and *second derivatives* to find the **absolute risk aversion coefficient**:\n",
+    "\n",
+    "- First derivative $u'(W) = k \\cdot W^{k - 1}$\n",
+    "- Second derivative $u''(W) = k \\cdot (k - 1) \\cdot W^{k - 2}$\n",
+    "\n",
+    "Substituting these into the formula for absolute risk aversion, we get:\n",
+    "\n",
+    "$$\\text{ARA}(W) = -\\frac{k \\cdot (k - 1) \\cdot W^{k - 2}}{k \\cdot W^{k - 1}} = -(k - 1) \\cdot W^{-1} = -\\frac{k - 1}{W} = \\boldsymbol{\\frac{1 - k}{W}}$$"
+   ]
   }
  ],
  "metadata": {
