Define cases of ARA.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -354,7 +354,13 @@
     "\n",
     "Substituting these into the formula for absolute risk aversion, we get:\n",
     "\n",
-    "$$\\text{ARA}(W) = -\\frac{k \\cdot (k - 1) \\cdot W^{k - 2}}{k \\cdot W^{k - 1}} = -(k - 1) \\cdot W^{-1} = -\\frac{k - 1}{W} = \\boldsymbol{\\frac{1 - k}{W}}$$"
+    "$$\\text{ARA}(W) = -\\frac{k \\cdot (k - 1) \\cdot W^{k - 2}}{k \\cdot W^{k - 1}} = -(k - 1) \\cdot W^{-1} = -\\frac{k - 1}{W} = \\boldsymbol{\\frac{1 - k}{W}}$$\n",
+    "\n",
+    "The sign and magnitude of the ARA coefficient depend on $k$ and $W$, which indicates the investor's risk attitude:\n",
+    "\n",
+    "- If $k < 1 , \\text{ARA}(W) > 0$, this indicates *risk aversion* since the utility function is **concave**.\n",
+    "- If $k > 1, \\text{ARA}(W) < 0$, this indicates *risk seeking* since the utility function is **convex**.\n",
+    "- If $k = 1, \\text{ARA}(W) = 0$, this indicates *risk neutrality* since the utility function is **linear**."
    ]
   }
  ],
