Compute ARA for different values of k.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -358,9 +358,59 @@
     "\n",
     "The sign and magnitude of the ARA coefficient depend on $k$ and $W$, which indicates the investor's risk attitude:\n",
     "\n",
-    "- If $k < 1 , \\text{ARA}(W) > 0$, this indicates *risk aversion* since the utility function is **concave**.\n",
-    "- If $k > 1, \\text{ARA}(W) < 0$, this indicates *risk seeking* since the utility function is **convex**.\n",
-    "- If $k = 1, \\text{ARA}(W) = 0$, this indicates *risk neutrality* since the utility function is **linear**."
+    "- If $k < 1 , \\text{ARA}(W) > 0$, indicating *risk aversion* since the utility function is **concave**.\n",
+    "- If $k > 1, \\text{ARA}(W) < 0$, indicating *risk seeking* since the utility function is **convex**.\n",
+    "- If $k = 1, \\text{ARA}(W) = 0$, indicating *risk neutrality* since the utility function is **linear**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For k = 0.5, the Absolute Risk Aversion (ARA) coefficient is 0.0005, indicating the investor is Risk-averse.\n",
+      "For k = 1, the Absolute Risk Aversion (ARA) coefficient is -0.0000, indicating the investor is Risk-neutral.\n",
+      "For k = 1.5, the Absolute Risk Aversion (ARA) coefficient is -0.0005, indicating the investor is Risk-taker.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_ARA_and_risk_attitude(k: float, W: float = 1000) -> None:\n",
+    "    \"\"\"\n",
+    "    Computes the Absolute Risk Aversion (ARA) coefficient for a given k and W,\n",
+    "    and describes the investor's risk attitude.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - k: The exponent in the utility function u(W) = W^k.\n",
+    "    - W: Wealth, with a default value of 1000.\n",
+    "    \"\"\"\n",
+    "    # First derivative of the utility function\n",
+    "    u_prime = k * W**(k - 1)\n",
+    "    \n",
+    "    # Second derivative of the utility function\n",
+    "    u_double_prime = k * (k - 1) * W**(k - 2)\n",
+    "    \n",
+    "    # Absolute Risk Aversion (ARA) coefficient\n",
+    "    ARA = -(u_double_prime / u_prime)\n",
+    "    \n",
+    "    # Determine risk attitude based on k\n",
+    "    if k < 1:\n",
+    "        risk_attitude = \"Risk-averse\"\n",
+    "    elif k > 1:\n",
+    "        risk_attitude = \"Risk-taker\"\n",
+    "    else:  # k == 1\n",
+    "        risk_attitude = \"Risk-neutral\"\n",
+    "    \n",
+    "    print(f\"For k = {k}, the Absolute Risk Aversion (ARA) coefficient is {ARA:.4f}, indicating the investor is {risk_attitude}.\")\n",
+    "\n",
+    "# Example usage\n",
+    "k_values = [0.5, 1, 1.5]  # Example k values to illustrate different risk attitudes\n",
+    "for k in k_values:\n",
+    "    compute_ARA_and_risk_attitude(k)"
    ]
   }
  ],
