Adjust previous methods/overload them for new k parameter.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -438,6 +438,38 @@
     "\n",
     "Assume that $k = 1/2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjust the utility function for u(W) = W^k, with k=1/2\n",
+    "def utility(W: float, k: float = 1/2) -> float:\n",
+    "    return W**k\n",
+    "\n",
+    "# Adjusted expected utility calculation for the given gamble\n",
+    "def expected_utility(W0: float, W_win: float, W_lose: float, p_win: float, p_lose: float, k: float = 1/2) -> float:\n",
+    "    return p_win * utility(W0 + W_win, k) + p_lose * utility(W0 + W_lose, k)\n",
+    "\n",
+    "# Function to find the certainty equivalent remains the same\n",
+    "def find_certainty_equivalent(EU: float, W0: float, k: float = 1/2) -> float:\n",
+    "    func = lambda CE: utility(W0 + CE, k) - EU\n",
+    "    CE, = fsolve(func, 0)  # Initial guess for CE is 0.\n",
+    "    return CE\n",
+    "\n",
+    "# Function to calculate the risk premium remains the same\n",
+    "def calculate_risk_premium(E_W: float, W0: float, CE: float) -> float:\n",
+    "    return E_W - (W0 + CE)\n",
+    "\n",
+    "# Given values for the new scenario\n",
+    "W0 = 1000  # Initial wealth\n",
+    "W_win = 250  # Winning amount\n",
+    "W_lose = -400  # Losing amount\n",
+    "p_win = 2/3  # Probability of winning\n",
+    "p_lose = 1/3  # Probability of losing"
+   ]
   }
  ],
  "metadata": {
