Add functions for calculating the first and second derivatives of utility function.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -441,34 +441,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Certainty Equivalent: 7.12\n",
+      "Risk Premium: 26.21\n",
+      "Expected Utility: 31.7352\n"
+     ]
+    }
+   ],
    "source": [
     "# Adjust the utility function for u(W) = W^k, with k=1/2\n",
     "def utility(W: float, k: float = 1/2) -> float:\n",
     "    return W**k\n",
     "\n",
-    "# Adjusted expected utility calculation for the given gamble\n",
+    "# Adjusted expected utility calculation for the given gamble.\n",
     "def expected_utility(W0: float, W_win: float, W_lose: float, p_win: float, p_lose: float, k: float = 1/2) -> float:\n",
     "    return p_win * utility(W0 + W_win, k) + p_lose * utility(W0 + W_lose, k)\n",
     "\n",
-    "# Function to find the certainty equivalent remains the same\n",
+    "# Function to find the certainty equivalent remains the same.\n",
     "def find_certainty_equivalent(EU: float, W0: float, k: float = 1/2) -> float:\n",
     "    func = lambda CE: utility(W0 + CE, k) - EU\n",
     "    CE, = fsolve(func, 0)  # Initial guess for CE is 0.\n",
     "    return CE\n",
     "\n",
-    "# Function to calculate the risk premium remains the same\n",
+    "# Function to calculate the risk premium remains the same.\n",
     "def calculate_risk_premium(E_W: float, W0: float, CE: float) -> float:\n",
     "    return E_W - (W0 + CE)\n",
     "\n",
-    "# Given values for the new scenario\n",
+    "# Calculate the first and second derivatives of the utility function at W0.\n",
+    "def u_prime(W: float, k: float = 1/2) -> float:\n",
+    "    \"\"\"Calculate the first derivative of the utility function.\"\"\"\n",
+    "    return k * W**(k - 1)\n",
+    "\n",
+    "def u_double_prime(W: float, k: float = 1/2) -> float:\n",
+    "    \"\"\"Calculate the second derivative of the utility function.\"\"\"\n",
+    "    return k * (k - 1) * W**(k - 2)\n",
+    "\n",
+    "# Given values for the new scenario.\n",
     "W0 = 1000  # Initial wealth\n",
     "W_win = 250  # Winning amount\n",
     "W_lose = -400  # Losing amount\n",
     "p_win = 2/3  # Probability of winning\n",
-    "p_lose = 1/3  # Probability of losing"
+    "p_lose = 1/3  # Probability of losing\n",
+    "\n",
+    "# Calculate expected utility of the gamble.\n",
+    "EU = expected_utility(W0, W_win, W_lose, p_win, p_lose)\n",
+    "\n",
+    "# Solve for the certainty equivalent.\n",
+    "CE = find_certainty_equivalent(EU, W0)\n",
+    "\n",
+    "# Calculate expected wealth from the game.\n",
+    "E_W = W0 + p_win * W_win + p_lose * W_lose\n",
+    "\n",
+    "# Calculate the risk premium.\n",
+    "RP = calculate_risk_premium(E_W, W0, CE)\n",
+    "\n",
+    "# Display results.\n",
+    "print(f\"Certainty Equivalent: {CE:.2f}\")\n",
+    "print(f\"Risk Premium: {RP:.2f}\")\n",
+    "print(f\"Expected Utility: {EU:.4f}\")"
    ]
   }
  ],
