Write the Taylor Series methods and display final results.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -482,6 +482,14 @@
     "    \"\"\"Calculate the second derivative of the utility function.\"\"\"\n",
     "    return k * (k - 1) * W**(k - 2)\n",
     "\n",
+    "# Compute the Taylor series expansion to approximate expected utility.\n",
+    "def taylor_series_approximation(W0: float, delta_W: float, k: float = 1/2) -> float:\n",
+    "    \"\"\"Approximate the expected utility using Taylor series expansion.\"\"\"\n",
+    "    u_prime_W0 = u_prime(W0, k)\n",
+    "    u_double_prime_W0 = u_double_prime(W0, k)\n",
+    "\n",
+    "    return utility(W0, k) + u_prime_W0 * delta_W + 0.5 * u_double_prime_W0 * (delta_W**2)\n",
+    "\n",
     "# Given values for the new scenario.\n",
     "W0 = 1000  # Initial wealth\n",
     "W_win = 250  # Winning amount\n",
@@ -500,6 +508,12 @@
     "\n",
     "# Calculate the risk premium.\n",
     "RP = calculate_risk_premium(E_W, W0, CE)\n",
+    "\n",
+    "# Calculate the change in wealth for the gamble\n",
+    "delta_W = p_win * W_win + p_lose * W_lose\n",
+    "\n",
+    "# Calculate the Taylor series approximation of expected utility\n",
+    "EU_approx = taylor_series_approximation(W0, delta_W)\n",
     "\n",
     "# Display results.\n",
     "print(f\"Certainty Equivalent: {CE:.2f}\")\n",
