Answer and explain 2a.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,8 @@
      "text": [
       "Certainty Equivalent: 7.12\n",
       "Risk Premium: 26.21\n",
-      "Expected Utility: 31.7352\n"
+      "Expected Utility: 31.7352\n",
+      "Taylor Series Expected Utility Approximation: 32.1454\n"
      ]
     }
    ],
@@ -518,7 +519,25 @@
     "# Display results.\n",
     "print(f\"Certainty Equivalent: {CE:.2f}\")\n",
     "print(f\"Risk Premium: {RP:.2f}\")\n",
-    "print(f\"Expected Utility: {EU:.4f}\")"
+    "print(f\"Expected Utility: {EU:.4f}\")\n",
+    "print(f\"Taylor Series Expected Utility Approximation: {EU_approx:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. *What is the Certainty Equivalent of this risky game?*\n",
+    "\n",
+    "The Certainty Equivalent (CE) of the game is $\\bf{\\$7.12}$. This value represents the additional amount of money, over the initial wealth of $\\$1000$, that the investor would consider equivalent in utility to participating in the risky game. In other words, the investor would be indifferent between receiving an assured $\\$1007.12$ and playing the game with the potential to win $\\$250$ or lose $\\$400$ with given probabilities.\n",
+    "\n",
+    "2. *What is the exact Risk Premium of this risky game?*\n",
+    "\n",
+    "The Risk Premium (RP) of the game is $\\bf{\\$26.21}$. The risk premium is the difference between the expected wealth from the game and the certainty equivalent, adjusted for the initial wealth. It quantifies the amount the investor would pay to avoid the risk, indicating the monetary value of the risk to the investor. In this case, it shows that the investor would be willing to forgo $\\$26.21$ to avoid participating in the gamble, highlighting the investor's risk aversion.\n",
+    "\n",
+    "3. *How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?*\n",
+    "\n",
+    "The approximation of the expected utility using the Taylor series expansion is **32.1454**, compared to the directly calculated expected utility of **31.7352**. The small discrepancy between the Taylor series approximation and the actual expected utility suggests that the approximation is **quite good**, especially considering the simplicity and the local nature of the Taylor series expansion around the initial wealth $W_0$."
    ]
   }
  ],
